files/base/nextcloud/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-mysql
  labels:
    app: nextcloud-mysql
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud-mysql
        tier: backend
        part-of: nextcloud
    spec:
      containers:
        - name: nextcloud-mysql
          image: docker.io/mariadb:10
          imagePullPolicy: Always
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
            - --innodb-file-per-table=1
            - --log-bin-trust-function-creators=1
            - --log-bin
            - --expire-logs-days=7
            - --slave-connections-needed-for-purge=0
            - --innodb-buffer-pool-size=536870912
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            # capabilities:
            #   drop: [ "all" ]
            #   add: [ "chown" ]
          ports:
            - name: nextcloud-mysql
              containerPort: 3306
      volumes:
        - name: mysql-data
          hostPath:
            path: /srv/nextcloud/mysql
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mysql
  labels:
    app: nextcloud-mysql
spec:
  selector:
    app: nextcloud-mysql
  ports:
    - protocol: TCP
      name: mysql
      port: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
  labels:
    app: nextcloud-redis
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-redis
  template:
    metadata:
      labels:
        app: nextcloud-redis
        tier: backend
        part-of: nextcloud
    spec:
      containers:
        - name: nextcloud-redis
          image: docker.io/redis:latest
          imagePullPolicy: Always
          command:
            - redis-server
            - --save
            - "900"
            - "1"
            - --requirepass
            - "$(REDIS_HOST_PASSWORD)"
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            # capabilities:
            #   drop: [ "all" ]
            #   add: [ "chown" ]
          ports:
            - name: nextcloud-redis
              containerPort: 6379
          volumeMounts:
            - name: nextcloud-redis
              mountPath: /data
      volumes:
        - name: nextcloud-redis
          hostPath:
            path: /srv/nextcloud/redis
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  labels:
    app: nextcloud-redis
spec:
  selector:
    app: nextcloud-redis
  ports:
    - protocol: TCP
      name: nextcloud-redis
      port: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
        tier: frontend
        part-of: nextcloud
        egress: any
    spec:
      containers:
        - name: nextcloud
          image: docker.io/nextcloud:21
          imagePullPolicy: Always
          # resources:
          #   limits:
          #     memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            # capabilities:
            #   drop: [ "all" ]
            #   add: [ "chown" ]
          ports:
            - name: nextcloud
              containerPort: 80
          volumeMounts:
            - name: nextcloud-html
              mountPath: /var/www/html
            - name: nextcloud-custom-apps
              mountPath: /var/www/html/custom_apps
            - name: nextcloud-config
              mountPath: /var/www/html/config
            - name: nextcloud-data
              mountPath: /var/www/html/data
            - name: nextcloud-apache-config
              mountPath: /etc/apache2/mods-enabled/mpm_prefork.conf
              subPath: mpm_prefork.conf
              readOnly: true
            - name: nextcloud-apache-config
              mountPath: /etc/apache2/apache2.conf
              subPath: apache2.conf
              readOnly: true
            - name: nextcloud-php-config
              mountPath: /usr/local/etc/php/conf.d/nextcloud-apc.ini
              subPath: nextcloud-apc.ini
              readOnly: true
        - name: nextcloud-cron
          image: docker.io/nextcloud:21
          imagePullPolicy: Always
          command:
            - /cron.sh
          volumeMounts:
            - name: nextcloud-html
              mountPath: /var/www/html
            - name: nextcloud-custom-apps
              mountPath: /var/www/html/custom_apps
            - name: nextcloud-config
              mountPath: /var/www/html/config
            - name: nextcloud-data
              mountPath: /var/www/html/data
            - name: nextcloud-apache-config
              mountPath: /etc/apache2/mods-enabled/mpm_prefork.conf
              subPath: mpm_prefork.conf
              readOnly: true
            - name: nextcloud-apache-config
              mountPath: /etc/apache2/apache2.conf
              subPath: apache2.conf
              readOnly: true
            - name: nextcloud-php-config
              mountPath: /usr/local/etc/php/conf.d/nextcloud-apc.ini
              subPath: nextcloud-apc.ini
              readOnly: true
      volumes:
        - name: nextcloud-html
          persistentVolumeClaim:
            claimName: nextcloud-html
        - name: nextcloud-config
          hostPath:
            type: DirectoryOrCreate
            path: /srv/nextcloud/config
        - name: nextcloud-data
          hostPath:
            type: DirectoryOrCreate
            path: /srv/nextcloud/data
        - name: nextcloud-custom-apps
          hostPath:
            type: DirectoryOrCreate
            path: /srv/nextcloud/custom-apps
        - name: nextcloud-apache-config
          configMap:
            name: nextcloud-apache-config
        - name: nextcloud-php-config
          configMap:
            name: nextcloud-php-config

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      name: web
      port: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nextcloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: nextcloud-redirect@file
  labels:
    app: nextcloud
spec:
  rules:
    - host: nextcloud.192.168.122.11.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-talk-hpb
  labels:
    app: nextcloud-talk-hpb
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-talk-hpb
  template:
    metadata:
      labels:
        app: nextcloud-talk-hpb
        egress: any
        tier: frontend
    spec:
      containers:
        - name: nextcloud-talk-hpb
          image: ghcr.io/nextcloud-releases/aio-talk:latest
          imagePullPolicy: Always
          # resources:
          #   limits:
          #     memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            # capabilities:
            #   drop: [ "all" ]
            #   add: [ "chown" ]
          ports:
            - name: web
              containerPort: 8081
            - name: turn-udp
              containerPort: 3478
              protocol: UDP
            - name: turn-tcp
              containerPort: 3478
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-talk-hpb
  labels:
    app: nextcloud-talk-hpb
spec:
  selector:
    app: nextcloud-talk-hpb
  ports:
    - protocol: TCP
      name: web
      port: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-talk-turn
  labels:
    app: nextcloud-talk-hpb
spec:
  selector:
    app: nextcloud-talk-hpb
  ports:
    - protocol: TCP
      name: turn-tcp
      port: 3478
      targetPort: 3478
    - protocol: UDP
      name: turn-udp
      port: 3478
      targetPort: 3478
  type: LoadBalancer



---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nextcloud-talk-hpb
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: nextcloud-talk-hpb
spec:
  rules:
    - host: hpb.nextcloud.192.168.122.11.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-talk-hpb
                port:
                  number: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-whiteboard
  labels:
    app: nextcloud-whiteboard
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-whiteboard
  template:
    metadata:
      labels:
        app: nextcloud-whiteboard
        tier: frontend
        part-of: nextcloud
        egress: any
    spec:
      containers:
        - name: nextcloud-whiteboard
          image: ghcr.io/nextcloud-releases/aio-whiteboard:latest
          imagePullPolicy: Always
          # resources:
          #   limits:
          #     memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            # capabilities:
            #   drop: [ "all" ]
            #   add: [ "chown" ]
          ports:
            - name: web
              containerPort: 3002
          livenessProbe:
            exec:
              command:
                - /healthcheck.sh
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - /healthcheck.sh
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-whiteboard
  labels:
    app: nextcloud-whiteboard
spec:
  selector:
    app: nextcloud-whiteboard
  ports:
    - protocol: TCP
      name: web
      port: 3002

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nextcloud-whiteboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: nextcloud-whiteboard
spec:
  rules:
    - host: whiteboard.nextcloud.192.168.122.11.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-whiteboard
                port:
                  number: 3002
